# keyclean

./: .gitignore  CHANGELOG.md  Makefile  PLAN.md  PROMPT.md  PROMPT.txt  README.md  pyproject.toml  release.py  tox.ini
.github/workflows/: python-app.yml
rpm/: keyclean.desktop  keyclean.spec.in
src/keyclean/: __init__.py  __main__.py  app.py  config.py  keyboard_layout.py  renderer.py  safety_sequence.py
src/keyclean/input_grabber/: __init__.py  _base.py  _evdev.py  _fallback.py  _pynput.py  _wayland.py  _x11.py
tests/: conftest.py  test_app.py  test_input_grabber.py  test_keyboard_layout.py  test_renderer.py  test_safety_sequence.py
